modified:   README 	modified:   dsp.cpp 	modified:   fft.cpp 	modified:   main.cpp 	modified:   sound.cpp 	modified:   sound.hpp 	notes/VL_Sib.mp3 	notes/VOX_Sib.mp3

--- a/README
+++ b/README
@@ -1,3 +1,5 @@
 Hi, this is my small project.
 I only want to learn about the fft and how to apply it in the dsp, so i'll publish here my little works.
 All files are released under the GNU GPL V3
+
+The Api are listed in API.txt
